--- a/profile.html
+++ b/profile.html
@@ -21,6 +21,7 @@
 
 <body>
   <div id="profile_page" class="main_contents">
+
   <header id="header" class="profile_header">
     <h1>
       <object data="./images/カンプ書き出し/2x/アセット 51.svg" width="254" height="55"> </object>
@@ -31,12 +32,21 @@
         <li><a href="#profile_b">経歴</a></li>
         <li><a href="#me_and_design">わたしとWebデザイン</a></li>
         <li><a href="#strong_point">強み</a></li>
-      </ul>
+      </ul>  
     </nav>
+    <div class="profile_ham">
+      <nav class="ham_nav">
+        <ul>
+          <li><a href="index.html">ホーム</a></li>
+          <li><a href="works.html">制作実績</a></li>
+        </ul>
+      </nav>
+      <button type="button" id="navbtn"></button>
+    </div>
   </header>
   </div>
 
-  <div class="profile_ham">
+  <!-- <div class="profile_ham">
     <nav class="ham_nav">
       <ul>
         <li><a href="index.html">ホーム</a></li>
@@ -44,7 +54,7 @@
       </ul>
     </nav>
     <button type="button" id="navbtn"></button>
-  </div>
+  </div> -->
 
 
 <div class="contents_area profile_contents">
@@ -58,7 +68,7 @@
       <div class="front_content_area">
         <div class="front_content_title">
         </div>
-        <h3 class="ribbon1">大事にしていることは『何事も経験！』</h3>
+        <h3 class="ribbon1">『何事も経験！』</h3>
         <div class="front_content_text">
           一度きりの人生なので、できるだけ後悔のないように生きたいと思っています。
           これまで様々な職種のアルバイト、滝行、一人旅など色々なことをしてきました。
@@ -90,7 +100,7 @@
       <div class="front_content_area">
         <div class="front_content_title">
         </div>
-        <h3 class="ribbon1">心の中にギャルを飼っています。</h3>
+        <h3 class="ribbon1">心にギャルがいます。</h3>
         <div class="front_content_text">
           小さなことでくよくよしない、どんと構えて突き進んでいくギャルを心に飼っています。失敗をしても、次に生かす方法を考え、ポジティブに受け止めるようにしています。ロールモデルはエルフの荒川さん(お笑い芸人)です。
         </div>
