--- a/work_designcafe.html
+++ b/work_designcafe.html
@@ -65,7 +65,7 @@
       </div>
       <div class="mockup_screen">
       <h2>-完成図-</h2>
-      <div class="screenshot">
+      <div class="screenshot_pc">
         <img src="./images/dezasuta_LP_fin_W1920_PC.jpg" alt="PC版のスクリーンショット" class="pc_screen">
         <img src="./images/dezasuta_LP_fin_W375_スマホ.jpg" alt="スマホ版のスクリーンショット" class="sp_screen">
       </div>
