--- a/work_workers.html
+++ b/work_workers.html
@@ -65,9 +65,7 @@
       </div>
       <div class="mockup_screen">
       <h2>-完成図-</h2>
-      <div class="screenshot">
-        <!-- <img src="./images/カンプ書き出し/2x/screen_1_pc@2x-80.jpg" alt="PC版のスクリーンショット" class="pc_screen">
-        <img src="./images/カンプ書き出し/2x/screen_2_pc@2x-80.jpg" alt="スマホ版のスクリーンショット" class="sp_screen"> -->
+      <div class="screenshot_pc">
         <img src="./images/コワーキング＿PC.jpg" alt="PC版のスクリーンショット" class="pc_screen">
         <img src="./images/コワーキング＿SP.jpg" alt="スマホ版のスクリーンショット" class="sp_screen">
       </div>
