--- a/work_burger_pop02.html
+++ b/work_burger_pop02.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>design cafe</title>
+  <title>burger pop02</title>
   <link rel="stylesheet" href="https://use.typekit.net/xxxxxxx.css">
   <link rel="stylesheet" href="reset.css" />
 <link rel="stylesheet" href="style.css" />
@@ -22,9 +22,9 @@
 <body>
   <div class="main_contents">
   <header id="header" class="detail_header">
-    <h1>
-      <object data="./images/カンプ書き出し/2x/アセット 51.svg" width="254" height="55"> </object>
-    </h1>
+      <h1>
+        <object data="./images/カンプ書き出し/2x/アセット 51.svg" width="254" height="55"> </object>
+      </h1>
     <nav class="top_nav">
     </nav>
     <nav class="ham_nav">
@@ -39,35 +39,38 @@
   <div class="contents_area">
     <h2>ー作品詳細ー</h2>
     <div class="zoomIn">
-    <img src="./images/カンプ書き出し/2x/mockup_portfolio_pc@2x-80.jpg" alt="PCにモックアップしたカフェの画像" class="mockup_pc">
+    <img src="./images/カンプ書き出し/2x/mockup_burger_pop2@2x-80.jpg" alt="PCにモックアップした画像" class="mockup_pc">
     </div>
       <div class="mockup_text_area">
         <div class="mockup_page_left">
           <div class="mockup_title">概要</div>
-          <div class="mockup_text">~を強みとする美容室のサイト</div>
-          <div class="mockup_title">想定ターゲット</div>
-          <div class="mockup_text">20代女性</div>
+          <div class="mockup_text">WEB広告用バナーデザイン。新商品の告知のためのバナー〈ＰＯＰバージョン〉
+            </div>
+          <div class="mockup_title">目的</div>
+          <div class="mockup_text">サイト誘導と来店促進</div>
           <div class="mockup_title">担当内容</div>
-          <div class="mockup_text">デザイン、コーディング</div>
+          <div class="mockup_text">デザイン</div>
           <div class="mockup_title">制作期間</div>
-          <div class="mockup_text">3週間(ワイヤーフレーム○日、デザイン○日、
-            コーディング○日)</div>
+          <div class="mockup_text">1週間</div>
           <div class="mockup_title">使用ツール</div>
-          <div class="mockup_text">illustrator</div>
+          <div class="mockup_text">illustrator、Photoshop</div>
           <div class="mockup_title">制作費用</div>
-          <div class="mockup_text">10,000円</div>
+          <div class="mockup_text">ー</div>
         </div>
         <div class="mockup_page_right">
           <div class="mockup_title">制作のポイント</div>
-            <div class="mockup_text">・○○な印象を与えるために、～の部分は～を選びました。・○○な印象を与えるために、～の部分は～を選びました。・○○な印象を与えるために、～の部分は～を選びました。・○○な印象を与えるために、～の部分は～を選びました。・○○な印象を与えるために、～の部分は～を選びました。・○○な印象を与えるために、～の部分は～を選びました。・○○な印象を与えるために、～の部分は～を選びました。・○○な印象を与えるために、～の部分は～を選びました。・○○な印象を与えるために、～の部分は～を選びました。・○○な印象を与えるために、～の部分は～を選びました。・○○な印象を与えるために、～の部分は～を選びました。・○○な印象を与えるために、～の部分は～を選びました。・○○な印象を与えるために、～の部分は～を選びました。・○○な印象を与えるために、～の部分は～を選びました。・○○な印象を与えるために、～の部分は～を選びました。
+            <div class="mockup_text">
+              もう1つのＰＯＰバージョンのバナーよりも、中高生などの若年層に好まれるようなデザインにしました。
+背景にはテクスチャや画像を使わず、あえてベタ塗りにした具材たちを並べ、子供っぽさを出したデザインにしました。
+これはあくまで私個人の意見ではありますが、特に若年層のガールズは”見た目”を大事にする印象です。デラックスバーガーを食べている私、の印象も気にします。だからこそハンバーガーの広告が『ダイナミックで勢いがある』よりも『可愛らしい』方が好まれるのではないかと考え、”デラックスバーガー『なのに』かわいい”デザインにしました。
+
             </div>
         </div>
       </div>
       <div class="mockup_screen">
       <h2>-完成図-</h2>
-      <div class="screenshot_pc">
-        <img src="./images/dezasuta_LP_fin_W1920_PC.jpg" alt="PC版のスクリーンショット" class="pc_screen">
-        <img src="./images/dezasuta_LP_fin_W375_スマホ.jpg" alt="スマホ版のスクリーンショット" class="sp_screen">
+      <div class="screenshot_sp">
+        <img src="./images/カンプ書き出し/2x/mockup_burger_pop2@2x-80.jpg" alt="PC版のスクリーンショット" class="pc_screen">
       </div>
       </div>
   
