--- a/profile.html
+++ b/profile.html
@@ -169,15 +169,34 @@
     Webデザインというものに興味を持ちました。
     </p>
   </div>
+  
+<div class="wave_area">
   <div id="ship_left" class="ship">
-    <img src="images/カンプ書き出し/2x/アセット 57.svg">
+    <img src="images/カンプ書き出し/2x/アセット 64@2x-80.jpg">
   </div>
-  <div id="ship_right" class="ship">
-    <img src="images/カンプ書き出し/2x/アセット 57.svg">
+  <!-- <div id="ship_left" class="scroll-infinity">
+    <img src="images/カンプ書き出し/2x/アセット 64@2x-80.jpg">
   </div>
-  <div class="ship_and_me poyopoyo">
-    <img src="images/カンプ書き出し/2x/kirinuki_pc@2x-80.jpg">
-  </div>
+  <div id="wave_profile_01" class="scroll-infinity">
+    <div class="scroll-infinity__wrap">
+      <ul class="scroll-infinity__list scroll-infinity__list--right">
+        <li class="scroll-infinity__item"><img src="../portfolio/images/カンプ書き出し/2x/アセット 64@2x-80.jpg"></li>                        
+        <li class="scroll-infinity__item"><img src="../portfolio/images/カンプ書き出し/2x/アセット 64@2x-80.jpg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/カンプ書き出し/2x/アセット 64@2x-80.jpg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/カンプ書き出し/2x/アセット 64@2x-80.jpg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/カンプ書き出し/2x/アセット 64@2x-80.jpg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/カンプ書き出し/2x/アセット 64@2x-80.jpg"></li>
+      </ul>
+      <ul class="scroll-infinity__list scroll-infinity__list--right">
+        <li class="scroll-infinity__item"><img src="../portfolio/images/カンプ書き出し/2x/アセット 64@2x-80.jpg"></li>                        
+        <li class="scroll-infinity__item"><img src="../portfolio/images/カンプ書き出し/2x/アセット 64@2x-80.jpg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/カンプ書き出し/2x/アセット 64@2x-80.jpg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/カンプ書き出し/2x/アセット 64@2x-80.jpg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/カンプ書き出し/2x/アセット 64@2x-80.jpg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/カンプ書き出し/2x/アセット 64@2x-80.jpg"></li>
+      </ul>
+    </div>
+    </div> -->
 
   <div id="wave_profile_01" class="scroll-infinity">
     <div class="scroll-infinity__wrap">
@@ -239,6 +258,7 @@
           </ul>
         </div>
         </div> 
+</div>
 
 </section>
 
