--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <main>
     <div class="imgBox inview fadeIn_up">
     <div id="mainvisual">
-      <h1>『その先』を見据えたデザインで<br>新たな船出を、ともに。</h1>
+      <h1><span>『その先』を見据えたデザインで<br>新たな船出を、ともに。</span></h1>
     </div>
     </div>
     
