--- a/index.html
+++ b/index.html
@@ -22,7 +22,33 @@
 </head>
 
 <body>
-  
+  <div id="splash">
+    <div id="splash_logo">
+    <svg version="1.1" id="mask" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://
+    www.w3.org/1999/xlink" x="0px" y="0px" width="1856.5px" height="321.8px"
+    viewBox="0 0 1856.5 321.8" style="enable-background:new 0 0 1856.5 321.8;" xml:
+    space="preserve"><?xml version="1.0" encoding="UTF-8"?>
+    <svg id="D_xFF1A_遘√↓縺､縺・※" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 168.07 20.61">
+      <defs>
+        <style>
+          .cls-1 {
+            fill: #204972;
+          }
+        </style>
+      </defs>
+      <path class="cls-1" d="M.55,16.65c.6-.65,1.8-2.28,2.42-3.31.94-1.54,2.66-.34,2.16.82-.58,1.32-1.75,2.93-2.69,4.03-1.46,1.73-3.41.1-1.9-1.54ZM5.88,18.78c-1.3-.65-.5-2.52.94-1.92,4.06,1.66,4.63-1.18,3.26-3.1-.65-.91-2.04-2.16-2.57-2.76-1.34-1.56.7-2.5,1.58-1.58.91.94,2.21,2.26,2.98,3.31,3.26,4.44-.91,8.64-6.19,6.05ZM10.94,8.2c-1.3.31-1.99-1.13-.94-1.7.5-.26.58-.46.36-.79-.53-.89-1.54-1.49-1.99-2.09-.86-1.15.77-2.21,1.75-1.22.98.98,3.34,2.47,3.41,3.86.05.67-.29,1.44-1.44,1.61-.31.05-.77.24-1.15.34ZM17.16,17.03c-.58-1.73-1.85-2.98-2.66-3.53-1.22-.84,0-2.4,1.34-1.61,1.32.79,2.78,1.97,3.58,3.84.82,1.9-1.68,3.02-2.26,1.3Z"/>
+      <path class="cls-1" d="M27.81,6.54c-1.46-.41-1.01-2.62.7-2.06.79.26,2.04.24,3.29-.07.24-.79.36-1.56.48-2.42.22-1.42,2.33-1.15,2.28.22-.02.36-.17.89-.34,1.46.29-.14.55-.26.77-.41,1.08-.77,2.59.72,1.06,1.82-.6.43-1.58.82-2.57,1.1-1.13,2.71-2.76,5.59-4.3,8.09-.89,1.44-3.19.5-2.14-1.06,1.34-1.99,2.76-4.03,3.94-6.55-1.22.24-2.26.14-3.17-.12ZM31.94,20.06c-2.23-1.13-2.5-3.72-.02-4.82,1.49-.67,3.12-.72,4.61-.46v-.84c0-.6-.05-1.2-.07-1.8-.02-.48.02-1.15.12-1.61.29-1.32,2.4-1.01,2.16.43-.07.36-.14.62-.14,1.13,0,.55,0,1.15.02,1.85.02.46.07.96.1,1.49,1.27.53,2.33,1.27,2.93,1.92,1.37,1.51-.58,3.22-1.73,1.82-.36-.43-.82-.86-1.37-1.25-.7,1.92-3.7,3.6-6.6,2.14ZM32.71,16.91c-.65.34-.7,1.03.02,1.39,1.44.72,3.38.02,3.65-1.27.02-.07,0-.17.02-.24-1.22-.41-2.52-.46-3.7.12ZM38.06,8.06c-1.32.07-1.42-1.92.12-2.06,1.58-.14,3.26.14,4.42.84,1.63.98.38,2.98-.79,2.23-1.13-.72-2.35-1.08-3.74-1.01Z"/>
+      <path class="cls-1" d="M56.64,8.66c.24-.46.46-.84.77-1.25.38-.5.26-.48-.19-.34-1.8.58-1.39.58-3.02,1.2-.77.29-1.44.53-2.16.72-2.11.58-2.76-2.18-.84-2.59.5-.12,1.9-.38,2.66-.58,1.18-.29,3.29-.77,5.74-1.46,2.47-.7,4.42-1.27,6.53-1.42,1.49-.1,1.9,1.08,1.63,1.85-.14.41-.67.89-2.35.79-1.22-.07-2.74.38-3.55.67-1.34.48-2.57,1.92-3.1,2.81-2.11,3.53-.5,8.57,4.87,8.38,2.52-.1,2.69,2.74.14,2.71-7.25-.02-9.74-6.67-7.13-11.5ZM64.03,10.24c-1.27-.55-.31-2.04.86-1.61.67.24,1.97.91,2.52,1.51.98,1.06-.5,2.59-1.34,1.61-.34-.38-1.54-1.3-2.04-1.51ZM66.45,8.15c-1.3-.5-.36-2.04.82-1.66.67.22,1.97.86,2.54,1.44,1.01,1.01-.41,2.59-1.27,1.63-.34-.38-1.58-1.22-2.09-1.42Z"/>
+      <path class="cls-1" d="M81.72,8.66c.24-.46.46-.84.77-1.25.38-.5.26-.48-.19-.34-1.8.58-1.39.58-3.02,1.2-.77.29-1.44.53-2.16.72-2.11.58-2.76-2.18-.84-2.59.5-.12,1.9-.38,2.66-.58,1.18-.29,3.29-.77,5.74-1.46,2.47-.7,4.42-1.27,6.53-1.42,1.49-.1,1.9,1.08,1.63,1.85-.14.41-.67.89-2.35.79-1.22-.07-2.74.38-3.55.67-1.34.48-2.57,1.92-3.1,2.81-2.11,3.53-.5,8.57,4.87,8.38,2.52-.1,2.69,2.74.14,2.71-7.25-.02-9.74-6.67-7.13-11.5ZM89.11,10.24c-1.27-.55-.31-2.04.86-1.61.67.24,1.97.91,2.52,1.51.98,1.06-.5,2.59-1.34,1.61-.34-.38-1.54-1.3-2.04-1.51ZM91.53,8.15c-1.3-.5-.36-2.04.82-1.66.67.22,1.97.86,2.54,1.44,1.01,1.01-.41,2.59-1.27,1.63-.34-.38-1.58-1.22-2.09-1.42Z"/>
+      <path class="cls-1" d="M113.13,10.1c.43.65,1.66,2.71,1.78,3.86.19,1.7-1.22,2.11-2.47,1.25-.31-.22-.65-.34-.98-.41-1.9-.41-4.58-.48-5.93-.07-1.34.41-1.75,1.63-.48,2.38,1.2.7,3.05.96,4.97.86,2.21-.1,2.06,2.57-.22,2.5-2.21-.07-4.32-.38-6-1.42-2.81-1.73-2.47-5.62,1.37-6.38,2.28-.46,4.61-.26,6.1-.17.36.02.46-.1.36-.41-.05-.17-.22-.7-.6-1.34-.43-.74-1.01-1.61-1.58-2.52-.17.05-.31.07-.46.1-2.76.6-4.85.46-6.5-.41-1.49-.77-.74-2.95.98-2.11,1.54.77,2.86.72,4.66.31-.58-.94-1.1-1.8-1.39-2.45-.89-1.94,1.8-2.5,2.28-.77.14.55.62,1.46,1.25,2.57.34-.12.67-.24,1.03-.36.34-.12.55-.31.89-.48,1.94-.98,2.78,1.34,1.32,2.09-.62.31-1.32.62-1.99.86.55.86,1.13,1.73,1.63,2.52ZM115.51,4.94c-.24-.43-1.27-1.46-1.7-1.75-1.1-.72.07-1.97,1.1-1.37.58.34,1.68,1.18,2.11,1.82.74,1.15-.89,2.35-1.51,1.3ZM118.05,3.21c-.26-.41-1.3-1.42-1.75-1.68-1.13-.67,0-1.94,1.06-1.39.6.31,1.7,1.15,2.16,1.78.79,1.13-.82,2.33-1.46,1.3Z"/>
+      <path class="cls-1" d="M127.32,17.08c-1.73-1.87-2.52-4.66-2.71-7.68-.1-1.37-.14-1.8-.12-2.66.05-1.51,2.38-1.82,2.45-.02.05.94-.05.98,0,2.09.1,2.52.55,4.9,1.9,6.19.62.6.94.67,1.46-.05.29-.41.62-1.03.79-1.42.65-1.39,2.64-.38,2.18.86-.24.67-.67,1.42-.94,1.85-1.54,2.5-3.67,2.28-5.02.84ZM140.3,12.86c-.38-1.92-1.37-3.77-2.66-4.66-1.15-.79.14-2.57,1.58-1.49,1.7,1.27,3.36,3.53,3.6,5.57.19,1.75-2.18,2.23-2.52.58Z"/>
+      <path class="cls-1" d="M157.51,16.48c0-1.1.17-1.78.12-2.86-.12-2.66-3.77-.41-4.44.79-.58,1.03-1.25,2.09-1.51,3.26-.43,1.85-.96,1.97-1.44,2.04-.84.12-1.97-.46-1.42-1.85,1.08-2.71,2.45-5.11,3.84-7.27s2.64-4.2,3.82-6.07c.41-.67,1.06-1.51,1.32-1.99.79-1.42,3.02-.22,2.23,1.3-.19.34-.36.6-.55.84-.19.24-.43.5-.7.82-1.15,1.3-1.92,2.3-2.54,3.19-.62.89-1.1,1.66-1.63,2.45-.17.24-.1.19.07.05.86-.77,5.02-1.9,5.35,2.16.07.94-.12,1.75-.12,2.64,0,2.14,2.06,1.87,3.48.6,1.22-1.1,1.75-2.26,2.18-3.36.7-1.78,3.22-.55,2.3,1.25-.67,1.32-1.61,2.88-3.02,3.98-2.59,2.04-7.39,2.57-7.34-1.97Z"/>
+    </svg>
+  </svg><!--このSVGタグの作り方は下記に記述-->
+    <!--/splash_logo--></div>
+    <!--/splash--></div>
+    <div id="container">
+
   <!-- <div id="splash">
     <div id="splash-logo">
       <div class="loading-animation_gif">
@@ -437,11 +463,6 @@
 </div>
 
 
-</p>
-    <!--/container-->
-  </div>
-
-
 <footer>
   <div class="copylight">
   &copy;ふなででざいん2024
@@ -453,6 +474,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="./jquery.inview.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/vivus/0.4.4/vivus.min.js"></script>
 
 <script>
   $(function(){
@@ -461,6 +483,25 @@
       $(this).stop().addClass("is-show");
     }
   });
+  //SVGアニメーションの描画
+var stroke;
+stroke = new Vivus('mask', {//アニメーションをするIDの指定
+    start:'manual',//自動再生をせずスタートをマニュアルに
+    type: 'scenario-sync',// アニメーションのタイプを設定
+    duration: 10,//アニメーションの時間設定。数字が小さくなるほど速い
+    forceRender: false,//パスが更新された場合に再レンダリングさせない
+    animTimingFunction:Vivus.EASE,//動きの加速減速設定
+},
+function(){
+       $("#mask").attr("class", "done");//描画が終わったらdoneというクラスを追加
+}
+);
+
+$(window).on('load',function(){
+  $("#splash").delay(3000).fadeOut('slow');//ローディング画面を3秒（3000ms）待機してからフェイドアウト
+	$("#splash_logo").delay(3000).fadeOut('slow');//ロゴを3秒（3000ms）待機してからフェイドアウト
+        stroke.play();//SVGアニメーションの実行
+});
 });
 
   $(function(){
