--- a/index.html
+++ b/index.html
@@ -94,10 +94,14 @@
     <div class="imgBox inview fadeIn_up">
     <div id="mainvisual">
       <h1><span>『その先』を見据えたデザインで<br>新たな船出を、ともに。</span></h1>
+      <h1>
+        <div class="sp_title_area">
+          <img src="../portfolio/images/カンプ書き出し/2x/アセット 42@2x-80.jpg" class="sp_title_right">
+          <img src="../portfolio/images/カンプ書き出し/2x/アセット 43@2x-80.jpg" class="sp_title_left">
+        </div> 
+      </h1>
     </div>
     </div>
-    
-    
   </main>
 </div>
 
@@ -488,7 +492,7 @@ var stroke;
 stroke = new Vivus('mask', {//アニメーションをするIDの指定
     start:'manual',//自動再生をせずスタートをマニュアルに
     type: 'scenario-sync',// アニメーションのタイプを設定
-    duration: 10,//アニメーションの時間設定。数字が小さくなるほど速い
+    duration: 20,//アニメーションの時間設定。数字が小さくなるほど速い
     forceRender: false,//パスが更新された場合に再レンダリングさせない
     animTimingFunction:Vivus.EASE,//動きの加速減速設定
 },
@@ -498,8 +502,8 @@ function(){
 );
 
 $(window).on('load',function(){
-  $("#splash").delay(3000).fadeOut('slow');//ローディング画面を3秒（3000ms）待機してからフェイドアウト
-	$("#splash_logo").delay(3000).fadeOut('slow');//ロゴを3秒（3000ms）待機してからフェイドアウト
+  $("#splash").delay(4000).fadeOut('slow');//ローディング画面を3秒（3000ms）待機してからフェイドアウト
+	$("#splash_logo").delay(6000).fadeOut('slow');//ロゴを3秒（3000ms）待機してからフェイドアウト
         stroke.play();//SVGアニメーションの実行
 });
 });
