--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
   </div>
 </section>
 
-<div class="imgBox inview fadeIn_up">
+<!-- <div class="imgBox inview fadeIn_up">
 <section id="profile">
   <div class="profile_img_area">
     <img src="../portfolio/images/仮プロフィール.jpg" alt="大谷のプロフィール画像">
@@ -149,7 +149,27 @@
     </div>
   </div>
 </section>
-</div>
+</div> -->
+
+<section id="profile" class="profile_area">
+  <div class="profile_img_area">
+    <img src="../portfolio/images/仮プロフィール.jpg" alt="大谷のプロフィール画像">
+  </div>
+  <div class="profile_right">
+    <div class="name_area">
+      <div class="name">大谷&emsp;歩紀</div>
+      <div class="english_name">Ohtani&emsp;Ibuki</div>
+    </div>
+    <div class="profile_text">
+      <p>
+        2000年生まれ、島根県出身。東京都在住。<br>
+        大学卒業後、新卒で人材会社に就職。キャリアアドバイザーとして学生面談・面接対策・企業紹介に従事。新卒採用担当も兼務し、自社説明会の企画・運営、広報活動に携わる。
+        現在、不動産会社にて自社物件サイトの更新業務に従事。物件写真の撮影・画像加工・ライティングに携わる。業務を通してWebサイトの管理・更新を学ぶ傍ら、WebデザインスクールにてWebデザインを学ぶ。
+      </p>
+    </div>
+  </div>
+</section>
+
 
 <div class="imgBox inview fadeIn_up">
 <button class="profile_btn01" onclick="location.href='profile.html'">大谷ってどんな人？</button>
