--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
       </h1>
     <nav class="top_nav">
       <ul class="top_header_ul">
-        <li><a href="#concept">コンセプト</a></li>
-        <li><a href="#works">制作実績</a></li>
-        <li><a href="#skill">できること</a></li>
-        <li><a href="#contact">CONTACT</a></li>
+        <li><a href="#concept"><span>コンセプト</span></a></li>
+        <li><a href="#works"><span>制作実績</span></a></li>
+        <li><a href="#skill"><span>できること</span></a></li>
+        <li><a href="#contact"><span>CONTACT</span></a></li>
       </ul>
     </nav>
   </header>
