--- a/work_hairsalon.html
+++ b/work_hairsalon.html
@@ -36,7 +36,7 @@
     <button type="button" id="navbtn"></button>
   </header>
  
-  <div class="contents_area">
+  <div class="contents_area_detail">
     <h2>ー作品詳細ー</h2>
     <div class="zoomIn">
     <img src="./images/カンプ書き出し/2x/mockup_pc@2x-80.jpg" alt="PCにモックアップしたヘアサロンの画像" class="mockup_pc">
