--- a/works.html
+++ b/works.html
@@ -37,11 +37,11 @@
     <button type="button" id="navbtn"></button>
   </header>
  
-  <div class="contents_area">
+  <div class="contents_area_works">
     <div class="works_page">
     <h2>制作実績</h2>
     <p>タップすると詳細を見ることができます。</p>
-    <div class="works_area">
+    <div class="works_page_contents">
       <div class="works_contents">
         <div class="works_img" onclick="location.href='work_workers.html'">
           <img src="../portfolio/images/カンプ書き出し/2x/mockup_workers_pc@2x-80.jpg">
@@ -70,26 +70,26 @@
         <div class="works_img banner_area">
           <img src="../portfolio/images/カンプ書き出し/2x/mockup_burger@2x-80.jpg">
         </div>
-        <div class="works_text">ハンバーガーショップ&emsp;SNS用広告用バナー【POPバージョン】</div>
+        <div class="works_text">ハンバーガーショップ&emsp;SNS用バナー POP ver.</div>
       </div>
       <div class="works_contents ">
         <div class="works_img banner_area">
           <img src="../portfolio/images/カンプ書き出し/2x/mockup_burger_pop2@2x-80.jpg">
         </div>
-        <div class="works_text">ハンバーガーショップ&emsp;SNS広告用バナー【POPバージョン】</div>
+        <div class="works_text">ハンバーガーショップ&emsp;SNS用バナー POP ver.</div>
       </div>
       <div class="works_contents">
         <div class="works_img banner_area">
           <img src="../portfolio/images/カンプ書き出し/2x/mockup_trip@2x-80.jpg">
         </div>
-        <div class="works_text">トラベルメディアのアプリ&emsp;SNS広告用バナー</div>
+        <div class="works_text">トラベルメディアのアプリ&emsp;SNS用バナー</div>
       </div>
     </div>
   </div>
 
   <footer id="profile_footer">
     <button class="works_btn" onclick="location.href='index.html'">トップページへ戻る</button>
-    <button class="works_btn" onclick="location.href='profile.html'">大谷のプロフィールをもう一度読む</button>
+    <button class="works_btn" onclick="location.href='profile.html'">大谷のプロフィールを読む</button>
     <div class="footer_comment">(ありがとうございます！)</div>
     <div class="copylight">
       &copy;ふなででざいん2024
