--- a/profile.html
+++ b/profile.html
@@ -24,7 +24,7 @@
 
   <header id="header" class="profile_header">
     <h1>
-      <object data="./images/カンプ書き出し/2x/アセット 51.svg" width="254" height="55"> </object>
+      <object data="./images/image/2x/アセット 51.svg" width="254" height="55"> </object>
       </h1>
     <nav class="top_nav">
       <ul>
@@ -45,6 +45,8 @@
     </div>
   </header>
   </div>
+
+  <a href="index.html#contact" class="btn btn--orange btn--radius">CONTACT</a>
 
   <!-- <div class="profile_ham">
     <nav class="ham_nav">
@@ -172,17 +174,17 @@
   
 <div class="wave_area">
   <div id="ship_left" class="ship">
-    <img src="images/カンプ書き出し/2x/アセット 64@2x-80.jpg">
+    <img src="images/image/2x/アセット 64@2x-80.jpg">
   </div>
   <!-- <div id="ship_left" class="scroll-infinity">
-    <img src="images/カンプ書き出し/2x/アセット 64@2x-80.jpg">
+    <img src="images/image/2x/アセット 64@2x-80.jpg">
   </div>
   <div id="wave_profile_01" class="scroll-infinity">
     <div class="scroll-infinity__wrap">
       <ul class="scroll-infinity__list scroll-infinity__list--right">
-        <li class="scroll-infinity__item"><img src="../portfolio/images/カンプ書き出し/2x/アセット 64@2x-80.jpg"></li>                        
-        <li class="scroll-infinity__item"><img src="../portfolio/images/カンプ書き出し/2x/アセット 64@2x-80.jpg"></li>
-        <li class="scroll-infinity__item"><img src="../portfolio/images/カンプ書き出し/2x/アセット 64@2x-80.jpg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/image/2x/アセット 64@2x-80.jpg"></li>                        
+        <li class="scroll-infinity__item"><img src="../portfolio/images/image/2x/アセット 64@2x-80.jpg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/image/2x/アセット 64@2x-80.jpg"></li>
         <li class="scroll-infinity__item"><img src="../portfolio/images/カンプ書き出し/2x/アセット 64@2x-80.jpg"></li>
         <li class="scroll-infinity__item"><img src="../portfolio/images/カンプ書き出し/2x/アセット 64@2x-80.jpg"></li>
         <li class="scroll-infinity__item"><img src="../portfolio/images/カンプ書き出し/2x/アセット 64@2x-80.jpg"></li>
@@ -276,10 +278,10 @@
 
 <section id="strong_point">
   <div id="strong_ship" class="ship">
-    <img src="images/カンプ書き出し/2x/強み_船_pc.svg">
+    <img src="images/image/2x/強み_船_pc.svg">
   </div>
   <div class="island">
-    <img src="../portfolio/images/カンプ書き出し/2x/強み_島_pc.svg">
+    <img src="../portfolio/images/image/2x/強み_島_pc.svg">
   </div>
   <div id="wave_strong_01" class="scroll-infinity">
     <div class="scroll-infinity__wrap">
