--- a/work_logo_funade.html
+++ b/work_logo_funade.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>burger pop01</title>
+  <title>logo funade</title>
   <link rel="stylesheet" href="https://use.typekit.net/xxxxxxx.css">
   <link rel="stylesheet" href="reset.css" />
 <link rel="stylesheet" href="style.css" />
@@ -23,7 +23,7 @@
   <div class="main_contents">
   <header id="header" class="detail_header">
       <h1>
-        <object data="./images/image/2x/アセット 51.svg" width="254" height="55"></object>
+        <object data="./images/image/2x/アセット 51.svg" width="254" height="55"> </object>
       </h1>
     <nav class="top_nav">
     </nav>
@@ -36,15 +36,16 @@
     <button type="button" id="navbtn"></button>
   </header>
  
+  <a href="index.html#contact" class="btn btn--orange btn--radius">CONTACT</a>
   <div class="contents_area_detail">
     <h2>ー作品詳細ー</h2>
     <div class="zoomIn">
-    <img src="./images/image/2x/mockup_burger@2x-80.jpg" alt="PCにモックアップした画像" class="mockup_pc">
+    <img src="./images/logo.png" alt="PCにモックアップした画像" class="mockup_pc">
     </div>
       <div class="mockup_text_area">
         <div class="mockup_page_left">
           <div class="mockup_title">概要</div>
-          <div class="mockup_text">WEB広告用バナーデザイン。新商品の告知のためのバナー〈POPバージョン〉
+          <div class="mockup_text">WEB広告用バナーデザイン。新商品の告知のためのバナー〈ＰＯＰバージョン〉
             </div>
           <div class="mockup_title">目的</div>
           <div class="mockup_text">サイト誘導と来店促進</div>
@@ -59,21 +60,17 @@
         </div>
         <div class="mockup_page_right">
           <div class="mockup_title">制作のポイント</div>
-            <div class="mockup_text">POPバージョンということで、大胆な色使いをしました。ここでは、ハンバーガーが美味しそうに見えるよう、オレンジ色を使用しています。
-              WEB広告として掲載された時に、ハンバーガーの広告であることが第一に目に入るよう、中心にハンバーガーを置き、視線が集まるようにサンバーストを取り入れました。
-              『激旨バーガー』の部分は旗にすることで、ハンバーガーが旗を振っているような動きが出てくるため、WEB広告として目を引くのではないかと考え、取り入れました。
-              旗の先を★にした理由は、ただの旗ではなく、『新商品告知』のための特別感を出すためです。
-              平日限定の部分は限定感を出すため、目を引くように黄色の配色にしました。バナー下部の帯にも★を入れることで、旗のデザインとの統一感を出しつつ、限定部分や日付部分に視線が誘導されるようにしました。
-              日付部分はあえて帯からはみ出させることで、強調されて自然と目に飛び込んでくるようにしました。
-              
+            <div class="mockup_text">
+              もう1つのＰＯＰバージョンのバナーよりも、中高生などの若年層に好まれるようなデザインにしました。
+背景にはテクスチャや画像を使わず、あえてベタ塗りにした具材たちを並べ、子供っぽさを出したデザインにしました。
+これはあくまで私個人の意見ではありますが、特に若年層のガールズは”見た目”を大事にする印象です。デラックスバーガーを食べている私、の印象も気にします。だからこそハンバーガーの広告が『ダイナミックで勢いがある』よりも『可愛らしい』方が好まれるのではないかと考え、”デラックスバーガー『なのに』かわいい”デザインにしました。
+
             </div>
         </div>
       </div>
       <div class="mockup_screen">
-      <h2>-完成図-</h2>
-      <div class="screenshot_sp">
-        <img src="./images/BURGER＿pop01.jpg" alt="PC版のスクリーンショット" class="pc_screen">
-      </div>
+      <h2>-ロゴができるまで-</h2>
+      <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSP-RV6QPveZduat4jjcuFBs2buz-moASxd0HCDr-zSqO6Z2GPpnUHep9iRuIN3KmbZjyagwZcMKzKY/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
       </div>
   
       <footer id="profile_footer">
