--- a/work_workers.html
+++ b/work_workers.html
@@ -23,7 +23,7 @@
   <div class="main_contents">
   <header id="header" class="detail_header">
       <h1>
-        <object data="./images/カンプ書き出し/2x/アセット 51.svg" width="254" height="55"> </object>
+        <object data="./images/image/2x/アセット 51.svg" width="254" height="55"> </object>
       </h1>
     <nav class="top_nav">
     </nav>
@@ -35,11 +35,13 @@
     </nav>
     <button type="button" id="navbtn"></button>
   </header>
+
+  <a href="index.html#contact" class="btn btn--orange btn--radius">CONTACT</a>
  
   <div class="contents_area_detail">
     <h2>ー作品詳細ー</h2>
     <div class="zoomIn">
-    <img src="./images/カンプ書き出し/2x/mockup_workers_pc@2x-80.jpg" alt="PCにモックアップした画像" class="mockup_pc">
+    <img src="./images/image/2x/mockup_workers_pc@2x-80.jpg" alt="PCにモックアップした画像" class="mockup_pc">
     </div>
       <div class="mockup_text_area">
         <div class="mockup_page_left">
