--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <div class="imgBox inview fadeIn_up_a">
   <header id="header" class="top_page_header">
     <h1>
-      <object data="./images/カンプ書き出し/2x/アセット 52.svg" width="254" height="55"> </object>
+      <object data="./images/image/2x/sun.svg" width="254" height="55"> </object>
       </h1>
     <nav class="top_nav">
       <ul class="top_header_ul">
@@ -96,8 +96,8 @@
       <h1><span>『その先』を見据えたデザインで<br>新たな船出を、ともに。</span></h1>
       <h1>
         <div class="sp_title_area">
-          <img src="../portfolio/images/カンプ書き出し/2x/アセット 42@2x-80.jpg" class="sp_title_right">
-          <img src="../portfolio/images/カンプ書き出し/2x/アセット 43@2x-80.jpg" class="sp_title_left">
+          <img src="../portfolio/images/image/2x/title_right@2x-80.jpg" class="sp_title_right">
+          <img src="../portfolio/images/image/2x/title_left@2x-80.jpg" class="sp_title_left">
         </div> 
       </h1>
     </div>
@@ -215,37 +215,37 @@
   <div class="works_area">
     <div class="works_contents">
       <div class="works_img" onclick="location.href='work_workers.html'">
-        <img src="../portfolio/images/カンプ書き出し/2x/mockup_workers_pc@2x-80.jpg">
+        <img src="../portfolio/images/image/2x/mockup_workers_pc@2x-80.jpg">
       </div>
       <div class="works_text">WORKERS様&emsp;LP</div>
     </div>
     <div class="works_contents">
       <div class="works_img" onclick="location.href='work_portfolio.html'">
-        <img src="../portfolio/images/カンプ書き出し/2x/mockup_portfolio_pc@2x-80.jpg">
+        <img src="../portfolio/images/image/2x/mockup_portfolio_pc@2x-80.jpg">
       </div>
       <div class="works_text">大谷歩紀&emsp;ポートフォリオサイト</div>
     </div>
     <div class="works_contents">
       <div class="works_img" onclick="location.href='work_designcafe.html'">
-        <img src="../portfolio/images/カンプ書き出し/2x/mockup_designcafe_pc@2x-80.jpg">
+        <img src="../portfolio/images/image/2x/mockup_designcafe_pc@2x-80.jpg">
       </div>
       <div class="works_text">design cafe様&emsp;公式サイト</div>
     </div>
     <div class="works_contents">
       <div class="works_img" onclick="location.href='work_hairsalon.html'">
-        <img src="../portfolio/images/カンプ書き出し/2x/mockup_pc@2x-80.jpg">
+        <img src="../portfolio/images/image/2x/mockup_pc@2x-80.jpg">
       </div>
       <div class="works_text">美容室 LIFE hair design様&emsp;公式サイト</div>
     </div>
     <div class="works_contents">
       <div class="works_img banner_area" onclick="location.href='work_burger_pop01.html'">
-        <img src="../portfolio/images/カンプ書き出し/2x/mockup_burger@2x-80.jpg">
+        <img src="../portfolio/images/image/2x/mockup_burger@2x-80.jpg">
       </div>
       <div class="works_text">ハンバーガーショップ&emsp;SNS用バナー【POPバージョン】</div>
     </div>
     <div class="works_contents">
       <div class="works_img banner_area" onclick="location.href='work_burger_pop02.html'">
-        <img src="../portfolio/images/カンプ書き出し/2x/mockup_burger_pop2@2x-80.jpg">
+        <img src="../portfolio/images/image/2x/mockup_burger_pop2@2x-80.jpg">
       </div>
       <div class="works_text">ハンバーガーショップ&emsp;SNS用バナー【POPバージョン】</div>
     </div>
@@ -304,7 +304,7 @@
   <div class="skill_area01">
     <div class="design_skill">
       <div class="skill_title">デザイン</div>
-      <div class="skill_img sp_img"><img src="./images/カンプ書き出し/2x/skill_01.svg" alt="パソコンのイラスト"></div>
+      <div class="skill_img sp_img"><img src="./images/image/2x/skill_01.svg" alt="パソコンのイラスト"></div>
       <p>illustrator/Photoshop</p>
       <div class="skill_text">
         ターゲットにどんな行動を促したいのかを考え<br>
@@ -313,7 +313,7 @@
         SNS投稿・資料作成・ロゴ・名刺・メニュー表なども作成いたします。
       </div>
     </div>
-    <div class="skill_img pc_img"><img src="./images/カンプ書き出し/2x/skill_01.svg" alt="パソコンのイラスト"></div>
+    <div class="skill_img pc_img"><img src="./images/image/2x/skill_01.svg" alt="パソコンのイラスト"></div>
   </div>
   </div>
 
@@ -321,7 +321,7 @@
     <div class="skill_area01">
       <div class="design_skill">
         <div class="skill_title">コーディング</div>
-        <div class="skill_img sp_img"><img src="./images/カンプ書き出し/2x/skill_02.svg"></div>
+        <div class="skill_img sp_img"><img src="./images/image/2x/skill_02.svg"></div>
         <p>HTML/CSS/JavaScript</p>
           <div class="skill_text">
           デザインを正しく表現するためのコーディングをします。<br>
@@ -329,7 +329,7 @@
           JavaScript・jQueryを用いて動きのあるサイトを作ることができます。
           </div>
       </div>
-      <div class="skill_img pc_img"><img src="./images/カンプ書き出し/2x/skill_02.svg"></div>
+      <div class="skill_img pc_img"><img src="./images/image/2x/skill_02.svg"></div>
     </div>
   </div>
 
@@ -338,7 +338,7 @@
       <div class="design_skill">
         <div class="skill_title">ライティング</div>
         <div class="skill_img sp_img">
-          <img src="./images/カンプ書き出し/2x/skill_03.svg">
+          <img src="./images/image/2x/skill_03.svg">
         </div>
         <p>“いいところ”を引き出す言葉選び"</p>
         <div class="skill_text">
@@ -348,9 +348,9 @@
           良さを伝えるお手伝いができます。
           </div>
       </div>
-      <!-- <div class="skill_img"><img src="./images/カンプ書き出し/2x/できること③_pc@2x-80.jpg"></div> -->
+      <!-- <div class="skill_img"><img src="./images/image/2x/できること③_pc@2x-80.jpg"></div> -->
        <div class="skill_img pc_img">
-      <img src="./images/カンプ書き出し/2x/skill_03.svg">
+      <img src="./images/image/2x/skill_03.svg">
     </div>
     </div>
   </div>
@@ -430,40 +430,63 @@
     1日以内にお返事させていただきます。
   </p>
   </div>
-  <div class="imgBox inview fadeIn_up">
-  <form action="your-server-side-script.php" method="POST">
+
+  <form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSdIsRVmnU3aWGI3uPsQTPIziDdnWos_ofMFfn8XpNCJCBcLOQ/formResponse"
+  method="POST" class="c-form" target="hidden_iframe"
+  onsubmit="submitted=true;">
+    <div class="c-form__item">
+      <label class="c-form__label" for="field-name"
+        >名前<span class="c-form__required">必須</span></label
+      >
+      <input
+        name="entry.798692797"
+        class="c-form__input"
+        id="field-name"
+        placeholder="山田 花子"
+        type="text"
+        required="required"
+      />
+    </div>
+    <div class="c-form__item">
+      <label class="c-form__label" for="field-mail"
+        >メールアドレス<span class="c-form__required">必須</span></label
+      >
+      <input
+        name="entry.1084204704"
+        class="c-form__input"
+        id="field-mail"
+        placeholder="sample@gmail.com"
+        type="email"
+        required="required"
+      />
+    </div>
+    <div class="c-form__item">
+      <label class="c-form__label" for="field-mail"
+        >社名/所属</label
+      >
+      <input
+        name="entry.778855009"
+        class="c-form__input"
+        id="field-mail"
+        placeholder="○○株式会社/△△事業部"
+        type="name"
+        required="required"
+      />
+    </div>
+    <div class="c-form__item">
+      <label class="c-form__label" for="field-message">メッセージ内容<span class="c-form__required">必須</span></label>
+      <textarea
+        name="entry.1277748541"
+        class="c-form__input"
+        id="field-message"
+        placeholder="お問い合わせ内容"
+      ></textarea>
+    </div>
+    <div class="c-form__submit">
+      <button type="submit">送信する</button>
+    </div>
   </form>
-    <div class="form-row">
-      <div class="form-label">
-        <label for="name">お名前</label>
-        <span>必須</span>
-      </div>
-      <input type="text" id="name" name="name" placeholder="例) 山田 太朗" required>
-    </div>
-    <div class="form-row">
-      <div class="form-label">
-        <label for="email">メールアドレス</label>
-        <span>必須</span>
-      </div>
-      <input type="email" id="email" name="email" placeholder="例) abcd@xyz.com" required>
-    </div>
-    <div class="form-row">
-      <div class="form-label">
-        <label for="company">社名/所属</label>
-      </div>
-      <textarea id="company" name="company" rows="5"placeholder="社名/所属をこちらにご記入ください" required></textarea>
-    </div>
-  
-    <div class="form-row">
-      <div class="form-label">
-        <label for="message">お問い合わせ内容</label>
-        <span>必須</span>
-      </div>
-      <textarea id="message" name="message" rows="5"placeholder="お問い合わせ内容をこちらにご記入ください" required></textarea>
-    </div>
-    <button class="contact_btn">送信する</button>
-  </form>
-  </div>
+
 </section>
 
 
@@ -475,7 +498,7 @@
 <div class="imgBox inview fadeIn_up">
 <section id="message" class="message_area">
   <div>
-    <img src="./images/カンプ書き出し/2x/thankstext_pc.svg" class="thanks_sun_pc">
+    <img src="./images/image/2x/thankstext_pc.svg" class="thanks_sun_pc">
     <p>ここまでポートフォリオをご覧いただき<br>
       ありがとうございました。</p>
   </div>
@@ -543,6 +566,15 @@ $(window).on('load',function(){
 </script>
 
 
+<script type="text/javascript">
+  let submitted = false;
+</script>
+<iframe
+  name="hidden_iframe"
+  id="hidden_iframe"
+  style="display: none"
+  onload="if(submitted){window.location='thanks_page.html';}"
+></iframe>
 
 </body>
 </html>
