--- a/work_designcafe.html
+++ b/work_designcafe.html
@@ -23,7 +23,7 @@
   <div class="main_contents">
   <header id="header" class="detail_header">
     <h1>
-      <object data="./images/カンプ書き出し/2x/アセット 51.svg" width="254" height="55"> </object>
+      <object data="./images/image/2x/アセット 51.svg" width="254" height="55"> </object>
     </h1>
     <nav class="top_nav">
     </nav>
@@ -36,10 +36,11 @@
     <button type="button" id="navbtn"></button>
   </header>
  
+  <a href="index.html#contact" class="btn btn--orange btn--radius">CONTACT</a>
   <div class="contents_area_detail">
     <h2>ー作品詳細ー</h2>
     <div class="zoomIn">
-    <img src="./images/カンプ書き出し/2x/mockup_designcafe_pc@2x-80.jpg" alt="PCにモックアップしたカフェの画像" class="mockup_pc">
+    <img src="./images/image/2x/mockup_designcafe_pc@2x-80.jpg" alt="PCにモックアップしたカフェの画像" class="mockup_pc">
     </div>
       <div class="mockup_text_area">
         <div class="mockup_page_left">
