--- a/works.html
+++ b/works.html
@@ -19,11 +19,11 @@
 </script>
 </head>
 
-<body>
+<body class="works_body">
   <div class="main_contents">
   <header id="header" class="works_header">
     <h1>
-    <object data="./images/カンプ書き出し/2x/アセット 51.svg" width="254" height="55"> </object>
+    <object data="./images/image/2x/アセット 51.svg" width="254" height="55"> </object>
     </h1>
     <nav class="top_nav">
     </nav>
@@ -37,6 +37,8 @@
     <button type="button" id="navbtn"></button>
   </header>
  
+  <a href="index.html#contact" class="btn btn--orange btn--radius">CONTACT</a>
+
   <div class="contents_area_works">
     <div class="works_page">
     <h2>制作実績</h2>
@@ -44,57 +46,86 @@
     <div class="works_page_contents">
       <div class="works_contents">
         <div class="works_img" onclick="location.href='work_workers.html'">
-          <img src="../portfolio/images/カンプ書き出し/2x/mockup_workers_pc@2x-80.jpg">
+          <img src="../portfolio/images/image/2x/mockup_workers_pc@2x-80.jpg">
         </div>
         <div class="works_text">WORKERS様&emsp;LP</div>
       </div>
       <div class="works_contents" onclick="location.href='work_portfolio.html'">
         <div class="works_img">
-          <img src="../portfolio/images/カンプ書き出し/2x/mockup_portfolio_pc@2x-80.jpg">
+          <img src="../portfolio/images/image/2x/mockup_portfolio_pc@2x-80.jpg">
         </div>
         <div class="works_text">大谷歩紀&emsp;ポートフォリオサイト</div>
       </div>
       <div class="works_contents" onclick="location.href='work_designcafe.html'">
         <div class="works_img">
-          <img src="../portfolio/images/カンプ書き出し/2x/mockup_designcafe_pc@2x-80.jpg">
+          <img src="../portfolio/images/image/2x/mockup_designcafe_pc@2x-80.jpg">
         </div>
         <div class="works_text">design cafe様&emsp;公式サイト</div>
       </div>
       <div class="works_contents" onclick="location.href='work_hairsalon.html'">
         <div class="works_img">
-          <img src="../portfolio/images/カンプ書き出し/2x/mockup_pc@2x-80.jpg">
+          <img src="../portfolio/images/image/2x/mockup_pc@2x-80.jpg">
         </div>
         <div class="works_text">美容室 LIFE hair design様&emsp;公式サイト</div>
       </div>
       <div class="works_contents">
-        <div class="works_img banner_area">
-          <img src="../portfolio/images/カンプ書き出し/2x/mockup_burger@2x-80.jpg">
+        <div class="works_img banner_area" onclick="location.href='work_burger_pop01.html'">
+          <img src="../portfolio/images/image/2x/mockup_burger@2x-80.jpg">
         </div>
         <div class="works_text">ハンバーガーショップ&emsp;SNS用バナー POP ver.</div>
       </div>
       <div class="works_contents ">
-        <div class="works_img banner_area">
-          <img src="../portfolio/images/カンプ書き出し/2x/mockup_burger_pop2@2x-80.jpg">
+        <div class="works_img banner_area" onclick="location.href='work_burger_pop02.html'">
+          <img src="../portfolio/images/image/2x/mockup_burger_pop2@2x-80.jpg">
         </div>
         <div class="works_text">ハンバーガーショップ&emsp;SNS用バナー POP ver.</div>
       </div>
       <div class="works_contents">
-        <div class="works_img banner_area">
-          <img src="../portfolio/images/カンプ書き出し/2x/mockup_trip@2x-80.jpg">
+        <div class="works_img banner_area" onclick="location.href='work_burger_rich.html'">
+          <img src="../portfolio/images/image/2x/mockup_burger_rich@2x-80.jpg">
         </div>
-        <div class="works_text">トラベルメディアのアプリ&emsp;SNS用バナー</div>
+        <div class="works_text">ハンバーガーショップ&emsp;SNS用バナー 高級ver.</div>
       </div>
+        <div class="works_contents">
+          <div class="works_img banner_area" onclick="location.href='work_phone.html'">
+            <img src="../portfolio/images/image/2x/mockup_phone@2x-80.jpg">
+          </div>
+          <div class="works_text">スマホプラン&emsp;SNS用バナー</div>
+        </div>
+        <div class="works_contents">
+          <div class="works_img banner_area" onclick="location.href='work_trip.html'">
+            <img src="../portfolio/images/image/2x/mockup_trip@2x-80.jpg">
+          </div>
+          <div class="works_text">トラベルメディアのアプリ&emsp;SNS用バナー</div>
+        </div>
+        <div class="works_contents">
+          <div class="works_img banner_area" onclick="location.href='work_logo_funade.html'">
+            <img src="../portfolio/images/logo.png">
+          </div>
+          <div class="works_text">ふなででざいん&emsp;ロゴ</div>
+        </div>
+      </div>
+
+      <footer id="profile_footer">
+        <button class="works_btn" onclick="location.href='index.html'">トップページへ戻る</button>
+        <button class="works_btn" onclick="location.href='profile.html'">大谷のプロフィールを読む</button>
+        <div class="footer_comment">(ありがとうございます！)</div>
+        <div class="copylight">
+          &copy;ふなででざいん2024
+          </div>
+        </footer>
+
     </div>
   </div>
 
-  <footer id="profile_footer">
+  <!-- <footer id="profile_footer">
     <button class="works_btn" onclick="location.href='index.html'">トップページへ戻る</button>
     <button class="works_btn" onclick="location.href='profile.html'">大谷のプロフィールを読む</button>
     <div class="footer_comment">(ありがとうございます！)</div>
     <div class="copylight">
       &copy;ふなででざいん2024
       </div>
-    </footer>
+    </footer> -->
 
 
 
