--- a/index.html
+++ b/index.html
@@ -151,9 +151,10 @@
 </section>
 </div> -->
 
+<div class="imgBox inview fadeIn_up">
 <section id="profile" class="profile_area">
   <div class="profile_img_area">
-    <img src="../portfolio/images/仮プロフィール.jpg" alt="大谷のプロフィール画像">
+    <img src="../portfolio/images/profile_image.jpg" alt="大谷のプロフィール画像">
   </div>
   <div class="profile_right">
     <div class="name_area">
@@ -169,6 +170,7 @@
     </div>
   </div>
 </section>
+</div>
 
 
 <div class="imgBox inview fadeIn_up">
@@ -431,6 +433,7 @@
   </p>
   </div>
 
+  <div class="imgBox inview fadeIn_up">
   <form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSdIsRVmnU3aWGI3uPsQTPIziDdnWos_ofMFfn8XpNCJCBcLOQ/formResponse"
   method="POST" class="c-form" target="hidden_iframe"
   onsubmit="submitted=true;">
@@ -486,8 +489,8 @@
       <button type="submit">送信する</button>
     </div>
   </form>
-
 </section>
+</div>
 
 
 
