--- a/profile.html
+++ b/profile.html
@@ -21,17 +21,16 @@
 
 <body>
   <div id="profile_page" class="main_contents">
-
   <header id="header" class="profile_header">
     <h1>
-      <object data="./images/image/2x/アセット 51.svg" width="254" height="55"> </object>
+      <object data="./images/image/2x/logo_top.svg" width="254" height="55"> </object>
       </h1>
-    <nav class="top_nav">
+    <nav class="profile_top_nav">
       <ul>
-        <li><a href="#parallax_box">大谷はこんな人間です！</a></li>
-        <li><a href="#profile_b">経歴</a></li>
-        <li><a href="#me_and_design">わたしとWebデザイン</a></li>
-        <li><a href="#strong_point">強み</a></li>
+        <li><a href="#parallax_box"><span>大谷はこんな人間です！</span></a></li>
+        <li><a href="#profile_b"><span>経歴</span></a></li>
+        <li><a href="#me_and_design"><span>わたしとWebデザイン</span></a></li>
+        <li><a href="#strong_point"><span>強み</span></a></li>
       </ul>  
     </nav>
     <div class="profile_ham">
@@ -88,7 +87,7 @@
       </div>
     </div>
     <div class="parallax_content img_bg_02">
-      <div class="parallax_text">“わたし”に<br>なるために<br>生きてます</div>
+      <div class="parallax_text_middle">“わたし”に<br>なるために<br>生きてます</div>
     </div>
     <div class="front_wrapper">
       <div class="front_content_area">
@@ -174,7 +173,7 @@
   
 <div class="wave_area">
   <div id="ship_left" class="ship">
-    <img src="images/image/2x/アセット 64@2x-80.jpg">
+    <img src="images/image/2x/ship_and_me@2x-80.jpg">
   </div>
   <!-- <div id="ship_left" class="scroll-infinity">
     <img src="images/image/2x/アセット 64@2x-80.jpg">
@@ -278,10 +277,10 @@
 
 <section id="strong_point">
   <div id="strong_ship" class="ship">
-    <img src="images/image/2x/強み_船_pc.svg">
+    <img src="images/image/2x/strong_ship_pc.svg">
   </div>
   <div class="island">
-    <img src="../portfolio/images/image/2x/強み_島_pc.svg">
+    <img src="../portfolio/images/image/2x/strong_island_pc.svg">
   </div>
   <div id="wave_strong_01" class="scroll-infinity">
     <div class="scroll-infinity__wrap">
@@ -335,21 +334,6 @@
     &copy;ふなででざいん2024
     </div>
   </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </div>
 
 
