--- a/work_burger_pop02.html
+++ b/work_burger_pop02.html
@@ -23,7 +23,7 @@
   <div class="main_contents">
   <header id="header" class="detail_header">
       <h1>
-        <object data="./images/image/2x/アセット 51.svg" width="254" height="55"> </object>
+        <object data="./images/image/2x/logo_top.svg" width="254" height="55"> </object>
       </h1>
     <nav class="top_nav">
     </nav>
@@ -39,7 +39,7 @@
   <div class="contents_area_detail">
     <h2>ー作品詳細ー</h2>
     <div class="zoomIn">
-    <img src="./images/image/2x/mockup_burger_pop2@2x-80.jpg" alt="PCにモックアップした画像" class="mockup_pc">
+    <img src="./images/image/2x/mockup_burger_pop2@2x-80.jpg" alt="PCにモックアップした画像" class="mockup_sp">
     </div>
       <div class="mockup_text_area">
         <div class="mockup_page_left">
@@ -60,10 +60,9 @@
         <div class="mockup_page_right">
           <div class="mockup_title">制作のポイント</div>
             <div class="mockup_text">
-              もう1つのＰＯＰバージョンのバナーよりも、中高生などの若年層に好まれるようなデザインにしました。
+              もう1つのＰＯＰバージョンのバナーよりも、子供～中高生などの若年層に好まれるようなデザインにしました。
 背景にはテクスチャや画像を使わず、あえてベタ塗りにした具材たちを並べ、子供っぽさを出したデザインにしました。
 これはあくまで私個人の意見ではありますが、特に若年層のガールズは”見た目”を大事にする印象です。デラックスバーガーを食べている私、の印象も気にします。だからこそハンバーガーの広告が『ダイナミックで勢いがある』よりも『可愛らしい』方が好まれるのではないかと考え、”デラックスバーガー『なのに』かわいい”デザインにしました。
-
             </div>
         </div>
       </div>
