--- a/work_burger_rich.html
+++ b/work_burger_rich.html
@@ -23,7 +23,7 @@
   <div class="main_contents">
   <header id="header" class="detail_header">
       <h1>
-        <object data="./images/image/2x/アセット 51.svg" width="254" height="55"> </object>
+        <object data="./images/image/2x/logo_top.svg" width="254" height="55"> </object>
       </h1>
     <nav class="top_nav">
     </nav>
@@ -40,12 +40,12 @@
   <div class="contents_area_detail">
     <h2>ー作品詳細ー</h2>
     <div class="zoomIn">
-    <img src="./images/image/2x/mockup_burger_rich@2x-80.jpg" alt="PCにモックアップした画像" class="mockup_pc">
+    <img src="./images/image/2x/mockup_burger_rich@2x-80.jpg" alt="PCにモックアップした画像" class="mockup_sp">
     </div>
       <div class="mockup_text_area">
         <div class="mockup_page_left">
           <div class="mockup_title">概要</div>
-          <div class="mockup_text">WEB広告用バナーデザイン。新商品の告知のためのバナー〈ＰＯＰバージョン〉
+          <div class="mockup_text">WEB広告用バナーデザイン。新商品の告知のためのバナー〈高級バージョン〉
             </div>
           <div class="mockup_title">目的</div>
           <div class="mockup_text">サイト誘導と来店促進</div>
@@ -61,10 +61,10 @@
         <div class="mockup_page_right">
           <div class="mockup_title">制作のポイント</div>
             <div class="mockup_text">
-              もう1つのＰＯＰバージョンのバナーよりも、中高生などの若年層に好まれるようなデザインにしました。
-背景にはテクスチャや画像を使わず、あえてベタ塗りにした具材たちを並べ、子供っぽさを出したデザインにしました。
-これはあくまで私個人の意見ではありますが、特に若年層のガールズは”見た目”を大事にする印象です。デラックスバーガーを食べている私、の印象も気にします。だからこそハンバーガーの広告が『ダイナミックで勢いがある』よりも『可愛らしい』方が好まれるのではないかと考え、”デラックスバーガー『なのに』かわいい”デザインにしました。
-
+              高級感を出すためには、厳かで特別な雰囲気を出したいと考え、黒い背景でハンバーガーだけに光が当たっているようなデザインにしました。
+ハンバーガーがどっしりと鎮座しているイメージを出したかったため、全体的に余白を多めに取って設計しました。
+フォントカラーは高級な金箔を連想させるようにゴールドのグラデーションを使用しました。
+高級感×ハンバーガーという組み合わせは人々のイメージとしてはギャップがあるのではないかと考えました。そこで広告として出てきた際はまずハンバーガーの広告であることが分かるよう、ハンバーガーをバナーの右半分が埋まるサイズにし、ハンバーガーだけに光が当たっているようにデザインしました。
             </div>
         </div>
       </div>
