--- a/work_designcafe.html
+++ b/work_designcafe.html
@@ -23,7 +23,7 @@
   <div class="main_contents">
   <header id="header" class="detail_header">
     <h1>
-      <object data="./images/image/2x/アセット 51.svg" width="254" height="55"> </object>
+      <object data="./images/image/2x/logo_top.svg" width="254" height="55"> </object>
     </h1>
     <nav class="top_nav">
     </nav>
@@ -57,6 +57,8 @@
           <div class="mockup_text">illustrator</div>
           <div class="mockup_title">制作費用</div>
           <div class="mockup_text">10,000円</div>
+          <div class="mockup_title">完成コード</div>
+          <div class="mockup_text">URL</div>
         </div>
         <div class="mockup_page_right">
           <div class="mockup_title">制作のポイント</div>
@@ -67,8 +69,8 @@
       <div class="mockup_screen">
       <h2>-完成図-</h2>
       <div class="screenshot_pc">
-        <img src="./images/dezasuta_LP_fin_W1920_PC.jpg" alt="PC版のスクリーンショット" class="pc_screen">
-        <img src="./images/dezasuta_LP_fin_W375_スマホ.jpg" alt="スマホ版のスクリーンショット" class="sp_screen">
+        <img src="./images/design_cafe_PC.jpg" alt="PC版のスクリーンショット" class="pc_screen">
+        <img src="./images/design_cafe_sp.jpg" alt="スマホ版のスクリーンショット" class="sp_screen">
       </div>
       </div>
   
