--- a/work_logo_funade.html
+++ b/work_logo_funade.html
@@ -23,7 +23,7 @@
   <div class="main_contents">
   <header id="header" class="detail_header">
       <h1>
-        <object data="./images/image/2x/アセット 51.svg" width="254" height="55"> </object>
+        <object data="./images/image/2x/logo_top.svg" width="254" height="55"> </object>
       </h1>
     <nav class="top_nav">
     </nav>
@@ -40,31 +40,24 @@
   <div class="contents_area_detail">
     <h2>ー作品詳細ー</h2>
     <div class="zoomIn">
-    <img src="./images/logo.png" alt="PCにモックアップした画像" class="mockup_pc">
+    <img src="./images/logo.png" alt="PCにモックアップした画像" class="mockup_sp">
     </div>
       <div class="mockup_text_area">
         <div class="mockup_page_left">
           <div class="mockup_title">概要</div>
-          <div class="mockup_text">WEB広告用バナーデザイン。新商品の告知のためのバナー〈ＰＯＰバージョン〉
+          <div class="mockup_text">ポートフォリオサイトのロゴデザイン
             </div>
-          <div class="mockup_title">目的</div>
-          <div class="mockup_text">サイト誘導と来店促進</div>
           <div class="mockup_title">担当内容</div>
           <div class="mockup_text">デザイン</div>
           <div class="mockup_title">制作期間</div>
           <div class="mockup_text">1週間</div>
           <div class="mockup_title">使用ツール</div>
-          <div class="mockup_text">illustrator、Photoshop</div>
-          <div class="mockup_title">制作費用</div>
-          <div class="mockup_text">ー</div>
+          <div class="mockup_text">illustrator</div>
         </div>
         <div class="mockup_page_right">
           <div class="mockup_title">制作のポイント</div>
             <div class="mockup_text">
-              もう1つのＰＯＰバージョンのバナーよりも、中高生などの若年層に好まれるようなデザインにしました。
-背景にはテクスチャや画像を使わず、あえてベタ塗りにした具材たちを並べ、子供っぽさを出したデザインにしました。
-これはあくまで私個人の意見ではありますが、特に若年層のガールズは”見た目”を大事にする印象です。デラックスバーガーを食べている私、の印象も気にします。だからこそハンバーガーの広告が『ダイナミックで勢いがある』よりも『可愛らしい』方が好まれるのではないかと考え、”デラックスバーガー『なのに』かわいい”デザインにしました。
-
+              ロゴのなりたち、込めた想い、ラフ案から完成に至るまでを下記のGoogleスライドにて解説しています。ぜひご覧ください。
             </div>
         </div>
       </div>
