--- a/work_phone.html
+++ b/work_phone.html
@@ -23,7 +23,7 @@
   <div class="main_contents">
   <header id="header" class="detail_header">
       <h1>
-        <object data="./images/image/2x/アセット 51.svg" width="254" height="55"> </object>
+        <object data="./images/image/2x/logo_top.svg" width="254" height="55"> </object>
       </h1>
     <nav class="top_nav">
     </nav>
@@ -35,21 +35,21 @@
     </nav>
     <button type="button" id="navbtn"></button>
   </header>
- 
+  <a href="index.html#contact" class="btn btn--orange btn--radius">CONTACT</a>
   <div class="contents_area_detail">
     <h2>ー作品詳細ー</h2>
     <div class="zoomIn">
-    <img src="./images/image/2x/mockup_phone@2x-80.jpg" alt="PCにモックアップした画像" class="mockup_pc">
+    <img src="./images/image/2x/mockup_phone@2x-80.jpg" alt="PCにモックアップした画像" class="mockup_sp">
     </div>
       <div class="mockup_text_area">
         <div class="mockup_page_left">
           <div class="mockup_title">概要</div>
-          <div class="mockup_text">WEB広告用バナーデザイン。新商品の告知のためのバナー〈ＰＯＰバージョン〉
+          <div class="mockup_text">スマホ学割プラン SPRINGセール用バナーデザイン
             </div>
           <div class="mockup_title">目的</div>
           <div class="mockup_text">サイト誘導と来店促進</div>
           <div class="mockup_title">担当内容</div>
-          <div class="mockup_text">デザイン</div>
+          <div class="mockup_text">デザイン(トレース)</div>
           <div class="mockup_title">制作期間</div>
           <div class="mockup_text">1週間</div>
           <div class="mockup_title">使用ツール</div>
@@ -60,9 +60,11 @@
         <div class="mockup_page_right">
           <div class="mockup_title">制作のポイント</div>
             <div class="mockup_text">
-              もう1つのＰＯＰバージョンのバナーよりも、中高生などの若年層に好まれるようなデザインにしました。
-背景にはテクスチャや画像を使わず、あえてベタ塗りにした具材たちを並べ、子供っぽさを出したデザインにしました。
-これはあくまで私個人の意見ではありますが、特に若年層のガールズは”見た目”を大事にする印象です。デラックスバーガーを食べている私、の印象も気にします。だからこそハンバーガーの広告が『ダイナミックで勢いがある』よりも『可愛らしい』方が好まれるのではないかと考え、”デラックスバーガー『なのに』かわいい”デザインにしました。
+             ・ スマホを持っている手の部分はPhotoshopでペンツールを用いて切り抜きました。見た目に違和感なく切り抜けるよう、手のしわや指のカーブに合わせて正確に行いました。<br>
+             ・文字間隔、中央揃えなど、要素の規則性を意識して制作しました。
+             <br>・文字のジャンプ率を意識し、値段や日付の数字を大きくしました。<br>
+             ・桜のストライプ部分は、illustratorのアセット機能を使用し、ストライプの地を作った上でクリッピングマスクを施しました。<br>
+
 
             </div>
         </div>
