--- a/work_portfolio.html
+++ b/work_portfolio.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>design cafe</title>
+  <title>portfolio</title>
   <link rel="stylesheet" href="https://use.typekit.net/xxxxxxx.css">
   <link rel="stylesheet" href="reset.css" />
 <link rel="stylesheet" href="style.css" />
@@ -23,7 +23,7 @@
   <div class="main_contents">
   <header id="header" class="detail_header">
     <h1>
-      <object data="./images/image/2x/アセット 51.svg" width="254" height="55"> </object>
+      <object data="./images/image/2x/logo_top.svg" width="254" height="55"> </object>
     </h1>
     <nav class="top_nav">
     </nav>
@@ -40,27 +40,41 @@
   <div class="contents_area_detail">
     <h2>ー作品詳細ー</h2>
     <div class="zoomIn">
-    <img src="./images/image/2x/mockup_portfolio_pc@2x-80.jpg" alt="PCにモックアップしたカフェの画像" class="mockup_pc">
+    <img src="./images/image/2x/mockup_portfolio@2x-80.jpg" alt="PCにモックアップしたカフェの画像" class="mockup_pc">
     </div>
       <div class="mockup_text_area">
         <div class="mockup_page_left">
           <div class="mockup_title">概要</div>
-          <div class="mockup_text">~を強みとする美容室のサイト</div>
-          <div class="mockup_title">想定ターゲット</div>
-          <div class="mockup_text">20代女性</div>
+          <div class="mockup_text">ポートフォリオサイト</div>
           <div class="mockup_title">担当内容</div>
           <div class="mockup_text">デザイン、コーディング</div>
           <div class="mockup_title">制作期間</div>
-          <div class="mockup_text">3週間(ワイヤーフレーム○日、デザイン○日、
-            コーディング○日)</div>
+          <div class="mockup_text">2か月(ワイヤーフレーム１週間、デザイン２週間、
+            コーディング１ヶ月</div>
           <div class="mockup_title">使用ツール</div>
-          <div class="mockup_text">illustrator</div>
+          <div class="mockup_text">illustrator、Photoshop</div>
           <div class="mockup_title">制作費用</div>
-          <div class="mockup_text">10,000円</div>
+          <div class="mockup_text">-円</div>
         </div>
         <div class="mockup_page_right">
           <div class="mockup_title">制作のポイント</div>
-            <div class="mockup_text">・○○な印象を与えるために、～の部分は～を選びました。・○○な印象を与えるために、～の部分は～を選びました。・○○な印象を与えるために、～の部分は～を選びました。・○○な印象を与えるために、～の部分は～を選びました。・○○な印象を与えるために、～の部分は～を選びました。・○○な印象を与えるために、～の部分は～を選びました。・○○な印象を与えるために、～の部分は～を選びました。・○○な印象を与えるために、～の部分は～を選びました。・○○な印象を与えるために、～の部分は～を選びました。・○○な印象を与えるために、～の部分は～を選びました。・○○な印象を与えるために、～の部分は～を選びました。・○○な印象を与えるために、～の部分は～を選びました。・○○な印象を与えるために、～の部分は～を選びました。・○○な印象を与えるために、～の部分は～を選びました。・○○な印象を与えるために、～の部分は～を選びました。
+            <div class="mockup_text">
+          【全体】<br>
+          私らしさを表現しながらも、この人に頼りたい！と思っていただけるような魅せ方、親しみやすさが伝わるような言葉選びを意識しました。
+          テーマは屋号の通り『船出』です。<br>
+          グローバルナビゲーションをホバーした時や、トップページ一番下のメッセージ部分など、所々にロゴのモチーフを散りばめて、オリジナリティを出しました。
+          【『ふなででざいん』に込めた想い】<br>
+          デザインを必要とするタイミングは、クライアント様が何かを始められるタイミング=つまり船出だと考えます。新たな船出は、期待だけでなく、上手く進んでいけるのかな？という不安もあると思います。そんな時に、”デザインという側面から未来に向かって漕ぎだすお手伝いをしたい。しかし、ただ寄り添うだけでなく、クライアント様が求める結果が出せるデザイナーになりたい。つまりその先を見据えたデザインをしたい”という想いを込めています。<br>
+          【トップページ】<br>
+          キャッチコピーは、”想いを形に～”と表現されることも多いですが、私個人の考えとしては、想いを形にするだけでは物足りなく感じてしまいました。”私のデザインを必要として下さった人にとって、その先に繋がるようなデザインをしたい”という想いがあるので、その想いを前面に押し出したキャッチコピーにしました。
+          私の人柄についても知っていただきたく、自己紹介ページに飛ぶボタンをあえて２つ作り、どちらを押しても自己紹介に飛ぶ(飛んでしまう！)デザインにしました。
+          諸々のスキルの説明よりも、制作実績を先に表示することで、視覚的にスキルを確認していただけるのではないかと考えました。<br>
+          【自己紹介ページ】<br>
+          自己紹介ページを作った理由は、このポートフォリオを見た方に大谷のことを覚えてもらうためです。そのためには自分自身の人間性を伝えることが第一だと考え、大谷の人間性が盛りだくさんのページにしました。
+          『まじめだけど、どこか遊び心のある人でいたい』と思っているので、色んな表情の写真を用いたり、船に小さく大谷が乗っていたりすることで、ひとつまみの遊び心を表現しています。<br>
+          ページ下部のボタンに、”大谷のプロフィールをもう一度見る”ボタンを付けました。情報量が多く、１度で大谷のことが分からなくても、ボタンを付けることでもう一度見てもらいやすくなるのではと考えました。しつこいぐらいに、自分のことはアピールしようと思い、このページにおいてはあえて謙虚さを無くしました。<br>
+        【制作実績・作品詳細ページ】<br>
+          作品を目立たせるため、シンプルな構成にしました。作品を見て相談したいと思って頂けたら、すぐにお問い合わせに飛べるよう、CONTACTボタンは常に表示されるようにしました。
             </div>
         </div>
       </div>
@@ -75,7 +89,7 @@
       <footer id="profile_footer">
         <button class="works_btn" onclick="location.href='works.html'">一覧へ戻る</button>
         <button class="works_btn" onclick="location.href='index.html'">トップページへ</button>
-        <div class="footer_comment">(ありがとうございます！)</div>
+        <div class="footer_comment"></div>
         <div class="copylight">
           &copy;ふなででざいん2024
           </div>
