--- a/work_workers.html
+++ b/work_workers.html
@@ -23,7 +23,7 @@
   <div class="main_contents">
   <header id="header" class="detail_header">
       <h1>
-        <object data="./images/image/2x/アセット 51.svg" width="254" height="55"> </object>
+        <object data="./images/image/2x/logo_top.svg" width="254" height="55"> </object>
       </h1>
     <nav class="top_nav">
     </nav>
@@ -48,35 +48,35 @@
           <div class="mockup_title">概要</div>
           <div class="mockup_text">会員制コワーキングスペースのＬＰ（ＷＯＲＫＥＲＳ様）</div>
           <div class="mockup_title">想定ターゲット</div>
-          <div class="mockup_text">20代女性</div>
+          <div class="mockup_text">20～50代ビジネスマン</div>
           <div class="mockup_title">担当内容</div>
-          <div class="mockup_text">デザイン、コーディング</div>
+          <div class="mockup_text">デザイン(トレース)</div>
           <div class="mockup_title">制作期間</div>
-          <div class="mockup_text">3週間(ワイヤーフレーム○日、デザイン○日、
-            コーディング○日)</div>
+          <div class="mockup_text">1週間</div>
           <div class="mockup_title">使用ツール</div>
           <div class="mockup_text">illustrator</div>
           <div class="mockup_title">制作費用</div>
-          <div class="mockup_text">10,000円</div>
+          <div class="mockup_text">ー</div>
         </div>
         <div class="mockup_page_right">
           <div class="mockup_title">制作のポイント</div>
-            <div class="mockup_text">・○○な印象を与えるために、～の部分は～を選びました。・○○な印象を与えるために、～の部分は～を選びました。・○○な印象を与えるために、～の部分は～を選びました。・○○な印象を与えるために、～の部分は～を選びました。・○○な印象を与えるために、～の部分は～を選びました。・○○な印象を与えるために、～の部分は～を選びました。・○○な印象を与えるために、～の部分は～を選びました。・○○な印象を与えるために、～の部分は～を選びました。・○○な印象を与えるために、～の部分は～を選びました。・○○な印象を与えるために、～の部分は～を選びました。・○○な印象を与えるために、～の部分は～を選びました。・○○な印象を与えるために、～の部分は～を選びました。・○○な印象を与えるために、～の部分は～を選びました。・○○な印象を与えるために、～の部分は～を選びました。・○○な印象を与えるために、～の部分は～を選びました。
+            <div class="mockup_text">
+              グローバルナビゲーション・ハンバーガーナビゲーションの位置やボタンの大きさを考えながらトレースしました。レスポンシブ表示の際、画面幅に合った文字サイズを意識し、伝わりやすく見やすいデザインを目指しました。各要素の間隔も、見ていてストレスを与えない程度の間隔を目指しました。
             </div>
         </div>
       </div>
       <div class="mockup_screen">
       <h2>-完成図-</h2>
       <div class="screenshot_pc">
-        <img src="./images/コワーキング＿PC.jpg" alt="PC版のスクリーンショット" class="pc_screen">
-        <img src="./images/コワーキング＿SP.jpg" alt="スマホ版のスクリーンショット" class="sp_screen">
+        <img src="./images/co-working_PC.jpg" alt="PC版のスクリーンショット" class="pc_screen">
+        <img src="./images/co-working_SP.jpg" alt="スマホ版のスクリーンショット" class="sp_screen">
       </div>
       </div>
   
       <footer id="profile_footer">
         <button class="works_btn" onclick="location.href='works.html'">一覧へ戻る</button>
         <button class="works_btn" onclick="location.href='index.html'">トップページへ</button>
-        <div class="footer_comment">(ありがとうございます！)</div>
+        <div class="footer_comment"></div>
         <div class="copylight">
           &copy;ふなででざいん2024
           </div>
