--- a/works.html
+++ b/works.html
@@ -23,7 +23,7 @@
   <div class="main_contents">
   <header id="header" class="works_header">
     <h1>
-    <object data="./images/image/2x/アセット 51.svg" width="254" height="55"> </object>
+    <object data="./images/image/2x/logo_top.svg" width="254" height="55"></object>
     </h1>
     <nav class="top_nav">
     </nav>
