--- a/work_burger_pop01.html
+++ b/work_burger_pop01.html
@@ -23,7 +23,7 @@
   <div class="main_contents">
   <header id="header" class="detail_header">
       <h1>
-        <object data="./images/image/2x/アセット 51.svg" width="254" height="55"></object>
+        <object data="./images/image/2x/logo_top.svg" width="254" height="55"></object>
       </h1>
     <nav class="top_nav">
     </nav>
@@ -39,7 +39,7 @@
   <div class="contents_area_detail">
     <h2>ー作品詳細ー</h2>
     <div class="zoomIn">
-    <img src="./images/image/2x/mockup_burger@2x-80.jpg" alt="PCにモックアップした画像" class="mockup_pc">
+    <img src="./images/image/2x/mockup_burger@2x-80.jpg" alt="PCにモックアップした画像" class="mockup_sp">
     </div>
       <div class="mockup_text_area">
         <div class="mockup_page_left">
