--- a/work_portfolio.html
+++ b/work_portfolio.html
@@ -61,8 +61,7 @@
             <div class="mockup_text">
           【全体】<br>
           私らしさを表現しながらも、この人に頼りたい！と思っていただけるような魅せ方、親しみやすさが伝わるような言葉選びを意識しました。
-          テーマは屋号の通り『船出』です。<br>
-          グローバルナビゲーションをホバーした時や、トップページ一番下のメッセージ部分など、所々にロゴのモチーフを散りばめて、オリジナリティを出しました。
+          テーマは屋号の通り『船出』です。グローバルナビゲーションをホバーした時や、トップページ一番下のメッセージ部分など、所々にロゴのモチーフを散りばめて、オリジナリティを出しました。<br>
           【『ふなででざいん』に込めた想い】<br>
           デザインを必要とするタイミングは、クライアント様が何かを始められるタイミング=つまり船出だと考えます。新たな船出は、期待だけでなく、上手く進んでいけるのかな？という不安もあると思います。そんな時に、”デザインという側面から未来に向かって漕ぎだすお手伝いをしたい。しかし、ただ寄り添うだけでなく、クライアント様が求める結果が出せるデザイナーになりたい。つまりその先を見据えたデザインをしたい”という想いを込めています。<br>
           【トップページ】<br>
