--- a/work_trip.html
+++ b/work_trip.html
@@ -77,7 +77,7 @@
       <footer id="profile_footer">
         <button class="works_btn" onclick="location.href='works.html'">一覧へ戻る</button>
         <button class="works_btn" onclick="location.href='index.html'">トップページへ</button>
-        <div class="footer_comment">(ありがとうございます！)</div>
+        <div class="footer_comment"></div>
         <div class="copylight">
           &copy;ふなででざいん2024
           </div>
